--- a/compose.yaml
+++ b/compose.yaml
@@ -14,6 +14,18 @@ services:
     networks:
       - app-network
 
+  hello-world:
+    build:
+      context: ./examples/hello-world
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
+      - "3000:3000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - app-network
+
 volumes:
   postgres_data:
 
