--- a/compose.yaml
+++ b/compose.yaml
@@ -15,6 +15,8 @@ services:
       - app-network
 
   hello-world:
+    image: mcp/inspector
+    pull_policy: always
     build:
       context: ./examples/hello-world
       dockerfile: Dockerfile
