--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "mcp-observability-frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,13 +12,19 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "axios": "^1.4.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "lucide-react": "^0.263.1",
+    "recharts": "^2.8.0",
+    "clsx": "^2.0.0"
   },
   "devDependencies": {
     "vite": "^4.4.0",
     "@vitejs/plugin-react": "^4.0.0",
     "typescript": "^5.0.0",
     "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0"
+    "@types/react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24"
   }
 } 
