--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
+CLERK_SECRET_KEY=sk_test_Q6Ju0qj0RBQBaOE36SUAWotKKyrXI34Gp0E4lq249K
 DATABASE_URL=postgresql://user:password@localhost:5433/mcp_observability
 PORT=3001
