--- a/compose.yaml
+++ b/compose.yaml
@@ -28,6 +28,7 @@ services:
     environment:
       DATABASE_URL: "postgresql://user:password@postgres:5432/mcp_observability"
       PORT: 3001
+      CLERK_SECRET_KEY: "${CLERK_SECRET_KEY:-sk_test_Q6Ju0qj0RBQBaOE36SUAWotKKyrXI34Gp0E4lq249K}"
     ports:
       - "3001:3001"
     depends_on:
