--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-  VITE_API_URL=http://localhost:3001
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_YW11c2VkLW1hY2F3LTI1LmNsZXJrLmFjY291bnRzLmRldiQ
+VITE_API_URL=http://localhost:3001
