clean up email intake

--- a/backend/.env
+++ b/backend/.env
@@ -12,3 +12,6 @@ VITE_API_URL=http://137.184.85.124:3001
 
 # Node Environment
 NODE_ENV=production 
+
+EMAIL_USER=etalesystemsteam@gmail.com
+EMAIL_APP_PASSWORD=pamcgxwvylspwofk
