--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,11 @@
     "@clerk/clerk-sdk-node": "^4.13.23",
     "@clerk/express": "^1.7.0",
     "@prisma/client": "^6.10.1",
+    "@types/nodemailer": "^6.4.17",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
